<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nebula</string>
    <string name="settings_title">Nebula settings</string>

    <string name="pref_hdr_title">HDR output</string>
    <string name="pref_hdr_brightness_title">HDR brightness</string>
    <string name="pref_render_scale_title">Nebula resolution cap</string>
    <string name="pref_frame_cap_title">Frame rate</string>
    <string name="pref_zoom_title">Zoom speed</string>

    <string name="cat_quality">Quality &amp; performance</string>
    <string name="cat_motion">Motion</string>

    <string name="pref_start_now_title">Start now</string>
    <string name="pref_start_now_summary">Launch the screensaver</string>
</resources>
